--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 * Dejan Noveski <dr.mote@gmail.com>
-* Toni Jovanoski <minimoog77@gmail.com>
+* Toni Jovanoski <minimoog77@gmail.com> - testing and building on Windows
+* Vasil Vangelovski <vvangelovski@gmail.com> - testing and building on OSX
